# lab-pulse-tutor

./: .gitignore  README.md  pyproject.toml  report.md
output/: lab8_report.md  tutor_report.md
src/lab_pulse_tutor/: ExtractFeatures.ipynb  crew.py  main.py
src/lab_pulse_tutor/.ipynb_checkpoints/: ExtractFeatures-checkpoint.ipynb
src/lab_pulse_tutor/config/: agents.yaml  tasks.yaml
src/lab_pulse_tutor/tools/: pdf_segmenter_tool.py
