[project]
name = "lab_pulse_tutor"
version = "0.1.0"
description = "Lab Pulse Tutor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "numpy>=2.2.6",
    "pymupdf>=1.26.7",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.5.0",
]

[project.scripts]
lab_pulse_tutor = "lab_pulse_tutor.main:run"
run_crew = "lab_pulse_tutor.main:run"
train = "lab_pulse_tutor.main:train"
replay = "lab_pulse_tutor.main:replay"
test = "lab_pulse_tutor.main:test"
run_with_trigger = "lab_pulse_tutor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
